[workspace]
members = [
    "ci-monitor",
    "ci-monitor-core",
    "ci-monitor-forge",
    "ci-monitor-gitlab",
    "ci-monitor-persistence",
]
resolver = "2"

[workspace.package]
authors = ["Ben Boeckel <ben.boeckel@kitware.com>"]
license = "MIT/Apache-2.0"
repository = "https://gitlab.kitware.com/utils/ci-monitoring"
edition = "2021"
