[package]
name = "ci-monitor-core"
version = "0.1.0"
readme = "README.md"
keywords = ["ci", "monitoring"]
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
digest = "0.10"
sha2 = "0.10"

chrono = { version = "~0.4", default-features = false }
