[package]
name = "ci-monitor-persistence"
version = "0.1.0"
workspace = ".."
readme = "README.md"
keywords = ["persistence", "ci", "monitoring"]
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
thiserror = "1.0.4"

async-trait = "~0.1.9"
ci-monitor-core = { version = "0.1.0", path = "../ci-monitor-core" }
