[package]
name = "ci-monitor-persistence"
version = "0.1.0"
workspace = ".."
readme = "README.md"
keywords = ["persistence", "ci", "monitoring"]
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dev-dependencies]
tempfile = "^3.2.0"

[dependencies]
perfect-derive = "0.1.3"
serde = { version = "^1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.25"
thiserror = "1.0.4"
toml = { version = "~0.8.14", default-features = false, features = ["parse", "display"] }

async-trait = "~0.1.9"
ci-monitor-core = { version = "0.1.0", path = "../ci-monitor-core" }
